--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         <div style="" class="centered">
             <div>
                 <h1 class="title-1">GroBot  -  An Automated Gardening System</h1>
-                <a href="~/Home/Contact" class="btn btn-success" target="_blank">Contact us</a>
+                <a href="https://ecs.spu.edu/GreenEden/" class="btn btn-success" target="_blank">Learn more</a>
             </div>
         </div>
         @*Logo Image*@
@@ -44,7 +44,7 @@
         <div class="box col-sm-12 col-lg-6">
             <h2>See your garden</h2>
             <p>Take a look at your garden's health</p>
-            <p><a class="btn btn-success" href="~/Grobot/ManageGarden">See Your Garden Report &raquo;</a></p>
+            <p><a class="btn btn-success" href="~/Grobot/ManageGarden">See Report &raquo;</a></p>
         </div>
     </div>
 
