--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="horizontal">
-                    <li><a href="~/Home/Index">Grobot</a></li>
+                    <li><a href="~/Home/Index">Home</a></li>
                     <li><a href="~/Home/About">About</a></li>
                     <li><a href="~/Home/Contact">Contact</a></li>
                 </ul>
